Ui of signin and signup pages

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,46 +4,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Signup_activity">
+    tools:context=".Signup_activity"
+    android:background="#131313">
 
-
-
-    <EditText
-        android:id="@+id/login_email"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="Email"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"/>
-
-    <EditText
-        android:id="@+id/login_password"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_below="@+id/login_email"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/tv_login"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Not a menber yet? Register."
-        android:layout_below="@id/login_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        />
+        android:background="@drawable/fragmentsbg">
 
-    <Button
-        android:id="@+id/login_btn"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_below="@+id/login_password"
-        android:backgroundTint="@color/teal_200"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="echo"
+            android:textColor="#FF0A62"
+            android:textSize="30dp"
+            android:layout_margin="20dp"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/pink_triangle_bg"
+            android:layout_marginTop="160dp"/>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:background="@drawable/pink_bg"
+            android:layout_marginTop="250dp">
+            <EditText
+                android:id="@+id/login_email"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Email"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="100dp"
+                android:textColor="@color/white"
+                app:backgroundTint = "@color/white"
+                android:textColorHint="@color/white"
+                />
+
+            <EditText
+                android:id="@+id/login_password"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:layout_below="@+id/login_email"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/white"
+                app:backgroundTint = "@color/white"
+                android:textColorHint="@color/white"
+                android:inputType="textPassword"/>
+
+            <TextView
+                android:id="@+id/tv_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Not a menber yet? Register."
+                android:layout_below="@id/login_password"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                />
+
+
+
+            <Button
+                android:id="@+id/login_btn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="Login"
+                android:layout_below="@+id/tv_login"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                app:strokeColor = "@color/white"
+                style="?attr/materialButtonOutlinedStyle"
+                />
+
+
+
+        </RelativeLayout>
+
+
+
+
+    </RelativeLayout>
 
 
 
