--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,59 +4,94 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#131313"
     tools:context=".Signup_activity">
 
-    <EditText
-        android:id="@+id/signup_name"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="Name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        />
-
-    <EditText
-        android:id="@+id/signup_email"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/signup_name"
-        android:hint="Email"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
-    <EditText
-        android:id="@+id/signup_password"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:layout_below="@+id/signup_email"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:inputType="textPassword"/>
-
-    <TextView
-        android:id="@+id/tv_signup"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already a member? Login"
-        android:layout_below="@id/signup_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:background="@drawable/fragmentsbg">
 
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="echo"
+            android:textColor="#FF0A62"
+            android:textSize="30dp" />
 
-    <Button
-        android:id="@+id/btn_signup"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signup_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="@color/teal_200"
-        android:text="Signup" />
-
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="160dp"
+            android:background="@drawable/pink_triangle_bg" />
 
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_marginTop="250dp"
+            android:background="@drawable/pink_bg">
 
+            <EditText
+                android:id="@+id/signup_name"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:hint="Name"
+                android:textColor="@color/white"
+                app:backgroundTint = "@color/white"
+                android:textColorHint="@color/white"/>
 
-</RelativeLayout>
+            <EditText
+                android:id="@+id/signup_email"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/signup_name"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:hint="Email"
+                android:textColor="@color/white"
+                app:backgroundTint = "@color/white"
+                android:textColorHint="@color/white"/>
+
+            <EditText
+                android:id="@+id/signup_password"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/signup_email"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColor="@color/white"
+                app:backgroundTint = "@color/white"
+                android:textColorHint="@color/white"/>
+
+            <TextView
+                android:id="@+id/tv_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/signup_password"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
+                android:text="Already a member? Login"
+                android:textColor="@color/white"
+                />
+
+            <Button
+                android:id="@+id/btn_signup"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="Signup"
+                android:layout_below="@+id/tv_signup"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                app:strokeColor = "@color/white"
+                style="?attr/materialButtonOutlinedStyle"
+                />
+
+        </RelativeLayout>
+        </RelativeLayout>
+    </RelativeLayout>
