--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="hot_pink">#FF0A62</color>
+    <color name="dark_gray">#1E1E1E</color>
+    <color name="light_gray">#665B5B</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
