activity_chat.xml

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -81,6 +81,7 @@
             <ImageView
                 android:id="@+id/backArrow"
                 android:layout_width="wrap_content"
+
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="36dp"
@@ -243,3 +244,4 @@
     </TextView>
 
 </RelativeLayout>
+<!--    random comment to commit-->
