--- a/app/src/main/res/drawable/card_gradient.xml
+++ b/app/src/main/res/drawable/card_gradient.xml
@@ -2,9 +2,10 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
-    <gradient android:startColor="#3C3B3B"
-        android:endColor="#3C3B3B00"
+    <gradient android:startColor="#3C3B3B00"
+        android:endColor="#3C3B3B"
         android:angle="90"
+
         />
 
 </shape>
