--- a/app/src/main/res/layout/sample_user_list.xml
+++ b/app/src/main/res/layout/sample_user_list.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@color/dark_gray">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
@@ -21,16 +22,18 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_launcher_background"
-                app:civ_border_width="2dp"
                 app:civ_border_color="#FF0A62"
-                android:layout_margin="10dp"
-                />
+                app:civ_border_width="2dp" />
 
             <TextView
                 android:id="@+id/sample_username"
